--- a/EmotionStrategySelector/src/main/java/de/unibi/agai/emodel/emotionstrategyselector/robotconnector/HCGui.form
+++ b/EmotionStrategySelector/src/main/java/de/unibi/agai/emodel/emotionstrategyselector/robotconnector/HCGui.form
@@ -871,6 +871,7 @@
       </Properties>
       <Events>
         <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="cbPosItemStateChanged"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cbPosActionPerformed"/>
         <EventHandler event="propertyChange" listener="java.beans.PropertyChangeListener" parameters="java.beans.PropertyChangeEvent" handler="cbPosPropertyChange"/>
       </Events>
     </Component>
